# uvvy-cpp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGES  CMakeLists.txt  COMPONENTS  Find Results for XXX.txt  Metakit.html  QUOTES.md  README  README.md  TODO  config.h.cmake  mettanode.sublime-project
demos/: CMakeLists.txt  opus-streaming.cpp
gui/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  Contact.cpp  Contact.h  MainWindow.cpp  MainWindow.h  QmlWindow.cpp  QmlWindow.h  Root.cpp  Root.h  UserInfo.cpp  UserInfo.h  UserManager.cpp  UserManager.h  WindowManager.cpp  WindowManager.h  exceptions.h  gui.pro  main.cpp  stdafx.h  ui.qrc
gui/Chat/: ChatItem.cpp  ChatItem.h  ChatItemDelegate.cpp  ChatItemDelegate.h  ChatItemFactory.cpp  ChatItemModel.cpp  ChatItemModel.h  ChatMessageItem.cpp  ChatMessageItem.h  ChatMessageTextEdit.cpp  ChatMessageTextEdit.h  ChatTextEdit.cpp  ChatTextEdit.h  ChatWidget.cpp  ChatWidget.h  ChatWidget.ui  ui_ChatWidget.h
gui/quick/: AddContactDialog.qml  ContactRequestDelegate.qml  FoundContactsList.qml  LoginScreen.qml  MainWindow.qml  RegistrationWindow.qml  UserInfoDelegate.qml
nat/libnatpmp/: CMakeLists.txt  LICENSE  README  create-map.cpp  message.h  op.cpp  op.h  util.cpp  util.h
nat/upnp/: CMakeLists.txt  README.md  httprequest.cpp  httprequest.h  multicastsocket.cpp  multicastsocket.h  router.cpp  router.h  soap.cpp  soap.h  upnpdescriptionparser.cpp  upnpdescriptionparser.h  upnpmcastsocket.cpp  upnpmcastsocket.h  upnprouter.cpp  upnprouter.h
netsteria/gui/: CMakeLists.txt  chat.cc  chat.h  chathistory.cpp  chathistory.h  gui.pro  gui.qrc  logarea.h  macsupport.h  macsupport.mm  main.cc  main.h  meter.cc  meter.h  profile.cc  profile.h  save.cc  search.cc  search.h  settings.cc  settings.h  view.cc  view.h
netsteria/lib/: CMakeLists.txt  action.cc  action.h  adler32.cc  adler32.h  adler64.cc  adler64.h  arch.cc  arch.h  archive.c  audio.cc  audio.h  base32.c  base64.cc  base64.h  cc.cc  cc.h  chk64.cc  chk64.h  chunk.h  crypt.cc  env.h  file.h  filesync.cpp  filesync.h  format.cc  format.h  index.cc  index.h  journal.c  lib.c  lib.h  lib.pro  locate.cc  locate.h  locom.c  opaque.cc  opaque.h  peer.cc  peer.h  (+11 more)
playground/: CMakeLists.txt  audio_service.cpp  audio_service.h  client_utils.cpp  client_utils.h  cryptest.cpp  macosx.mm  main.cpp  opus-streaming.cpp  packetsizes.plt  screencaster.cpp  traverse_nat.cpp  traverse_nat.h  udpsend.cpp  udpsend.h  unlogger.cpp  vpxenc.c
playground/PeerPicker/: CMakeLists.txt  PeerInfoProvider.cpp  PeerInfoProvider.h  PeerPicker.cpp  PeerPicker.h  PeerPickerWindow.ui  PeerTableModel.cpp  PeerTableModel.h  main.cpp
playground/data/: timing.plt
playground/kextest/: CMakeLists.txt  cryptest.cpp  kextest.cpp
playground/sstreams/: CMakeLists.txt  main.cpp
sst/: CMakeLists.txt  README  README.md  top.pri.in  top.pro
sst/.svn/: dir-prop-base  entries
sst/c/: base64.c  c.pro
sst/doc/: Makefile  TODO  api.conf  mainpage.dox
sst/lib/: CMakeLists.txt  aes.h  base32.cpp  base32.h  bdr.cc  bdr.h  chk32.h  dh.cc  dh.h  dsa.h  flow.cc  flow.h  hmac.cc  hmac.h  host.h  ident.cc  ident.h  key.cc  key.h  keyproto.x  lib.pro  os-unix.cc  os-win.cc  os.h  peerid.h  regcli.cc  rsa.cc  rsa.h  seg.cc  seg.h  sha2.cc  sha2.h  sign.cc  sign.h  sock.cc  sock.h  stream.cc  stream.h  timer.cc  timer.h  (+4 more)
sst/reg/: CMakeLists.txt
sst/rpcgen/: CMakeLists.txt  README  cout.c  hout.c  main.c  parse.c  parse.h  util.c
sst/shell/: CMakeLists.txt  TODO  asyncfile.cc  asyncfile.h  proto.cc  proto.h
sst/test/: CMakeLists.txt  README
sst_routing/regserver/: CMakeLists.txt
ssu/tests/: CMakeLists.txt  test_channel.cpp  test_host.cpp  test_link.cpp  test_optional.cpp  test_run_udp_receiver.cpp  test_serialization.cpp  test_stream_internal.cpp  test_stream_user.cpp  test_udp_link.cpp  test_vectorstream.cpp  testdata.cpp  testio.cpp
support/tests/: CMakeLists.txt  test_base32.cpp  test_byte_array.cpp  test_logging.cpp
tests/: CMakeLists.txt  tformat.cpp  tnotify.cpp
ui/: CMakeLists.txt  README.md  client_utils.cpp  client_utils.h  traverse_nat.cpp  traverse_nat.h
ui/doc/: TODO  chat_and_messaging.md  lib.conf  livemedia.dot  mainpage.dox
ui/gui/: CMakeLists.txt  MettaNode-Info.plist  chat.cc  chat.h  chathistory.cpp  chathistory.h  gui.qrc  gui.rc  logarea.cc  logwindow.cpp  logwindow.h  main.cc  main.h  save.cc  save.h  search.cc  search.h  settings.cc  settings.h
ui/lib/: CMakeLists.txt  Stream.hpp  action.h  adler32.h  arch.cc  arch.h  audio.cc  audio.h  chunk.cc  chunk.h  crypt.cc  crypt.h  env.h  file.cc  file.h  filesync.cpp  filesync.h  index.cc  index.h  opaque.cc  opaque.h  peer.cc  peer.h  rcsum.h  scan.cc  scan.h  share.h  store.cc  store.h  update.cc  update.h  voice.cc  voice.h
ui/qt4/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Meter.cpp  OSXInfo.plist  PeerPicker-Info.plist  PeerPicker.cpp  PeerPickerWindow.ui  PeerTableModel.cpp  PeerTableModel.h  ProfileEditor.cpp  ProfileEditor.h  ProfileEditor.ui  SingleCallWidget.ui  UserCard.cpp  UserCard.h  UserCard.ui  XcpApplication.cpp  macosx.mm  main.cpp
ui/qt5/: CMakeLists.txt  CallService.cpp  CallService.h  CallWindow.cpp  CallWindow.h  ChatHistory.cpp  ChatHistory.h  ChatModel.h  ChatWindow.cpp  ChatWindow.h  ContactModel.cpp  ContactModel.h  HostState.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Meter.h  PeerPicker.cpp  PeerTableModel.cpp  PeerTableModel.h  ProfileEditor.cpp  ProfileEditor.h  QmlBasedWindow.cpp  QmlBasedWindow.h  XcpApplication.cpp  XcpApplication.h  macosx.mm  macsupport.h  main.cpp  ui.qrc
ui/voice_service/: CMakeLists.txt  abstract_audio_input.cpp  abstract_audio_input.h  abstract_audio_output.cpp  abstract_audio_output.h  audio_hardware.cpp  audio_hardware.h  audio_input.cpp  audio_input.h  audio_loopback.cpp  audio_loopback.h  audio_output.cpp  audio_sender.cpp  audio_sender.h  opus_input.h  (+11 more)
voicebox/: CMakeLists.txt  abstract_audio_output.h  audio_output.h  audio_stream.cpp  audio_stream.h  file_looped_input.h  file_looped_output.h  packetized_input.h  raw_output.cpp
(+499 files in other folders)
